objects/Forecast_Snapshot_Setup__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Final_Stage__c</fullName>
        <label>Final Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordTypeId__c</fullName>
        <description>Contains Opportunity RecordTypeId</description>
        <inlineHelpText>Contains Opportunity RecordTypeId</inlineHelpText>
        <label>Opportunity RecordTypeId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Forecast Snapshot Setup</label>
</CustomObject>